<resources>
    <string name="app_name">EasyMsging</string>
    <string name="donate">Donate</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="donate_to_developer">Donate to Developer</string>
    <string name="send_direct_message">Send Direct Message</string>
    <string name="_91">91</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_message">Enter Message</string>
    <string name="send">Send</string>
</resources>