<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardElevation="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="0.9"
            android:textColor="@color/colorAccent"
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:text="@string/send_direct_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="18sp" />

        <ImageView
            android:layout_weight="0.1"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/img_donate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_donate" />


    </LinearLayout>

        <LinearLayout
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="+"
                android:textSize="18sp" />

            <EditText
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:id="@+id/edCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:padding="10dp"
                android:text="@string/_91" />

            <EditText
                android:focusable="true"
                android:textColorHint="@color/colorAccent"
                android:textColor="@color/colorAccent"
                android:id="@+id/edNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_number"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="10dp" />
        </LinearLayout>

        <EditText
            android:focusable="true"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"
            android:id="@+id/edText"
            android:hint="@string/enter_message"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:textColor="@color/colorAccent"
            android:background="@drawable/btn_background"
            android:layout_margin="20dp"
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send" />
    </LinearLayout>
</androidx.cardview.widget.CardView>